--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Travel.com</title>
     <link  rel="shortcut icon" href="images/logo/logo.png"  type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+  
+
   
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 </head>
@@ -56,7 +59,69 @@
                 </div>
               </nav>
         </section>
-        <section class="slide">slide</section>
+        <section class="slide">
+          <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselIndicators" data-slide-to="0" class="active "></li>
+              <li data-target="#carouselIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselIndicators" data-slide-to="2"></li>
+              <li data-target="#carouselIndicators" data-slide-to="3"></li>
+              <li data-target="#carouselIndicators" data-slide-to="4"></li>
+              <li data-target="#carouselIndicators" data-slide-to="5"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="images/slide/slide-1.jpg" alt="First slide">
+                <div class="carousel-caption d-none d-md-block text-dark " >
+                  <h5 style="font-size: 25px;"><i>Microbus- luxurious suit</i></h5>
+                  <p><em>It would be world class place to go by car.</em></p>
+                  <button class="btn btn-outline-dark "><i class="fa fa-car text-info"></i>  50$ per hour</button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/slide/slide-2.jpg" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block text-light " >
+                  <h5 style="font-size: 25px;"><i>Hot AirBallon </i></h5>
+                  <p><em>Great view from the sky and beautiful plot to watch just feel like a haven.</em></p>
+                  <button class="btn btn-outline-dark text-light "><i class="fa fa-child text-info"></i></i>  50$ per hour</button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/slide/slide-3.jpg" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block text-light " >
+                  <h5 style="font-size: 25px;"><i>Aeroplane- most wonderful journey </i></h5>
+                  <p><em>Flying in an airplane is the most efficient and luxurious way to get across the globe. Despite the weather delays, security checkpoints, and long lines at baggage claim, nothing beats the convenience of air travel..</em></p>
+                  <button class="btn btn-outline-dark text-light "><i class="fa fa-plane text-info"></i></i>  250$ per hour </button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/slide/slide-4.jpg" alt="Fourth slide">
+                <div class="carousel-caption d-none d-md-block text-light " >
+                  <h5 style="font-size: 25px;"><i>Boat-marvelous boats  at  here </i></h5>
+                  <p><em>Sailing a boat calls for quick action, a blending of feeling with the wind and water as well as with the very heart and soul of the boat itself..</em></p>
+                  <button class="btn btn-outline-dark text-light "><i class="fa fa-bath text-info"></i></i>  80$ per hour </button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/slide/slide-6.jpg" alt="Fifth slide">
+                <div class="carousel-caption d-none d-md-block text-light " >
+                  <h5 style="font-size: 25px;"><i>World class Car-luxurious suit</i></h5>
+                  <p><em>It would be world class place to go by car.</em></p>
+                  <button class="btn btn-outline-dark text-light "><i class="fa fa-car text-info"></i>  100$ per hour</button>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
+        </section>
         <section class="aside1">aside1</section>
         <section class="content">content</section>
         <section class="aside2">aside2</section>
