updated the brand

--- a/index.html
+++ b/index.html
@@ -127,29 +127,21 @@
           <div class="container-fluid mt-5">
             <h2>Connecting you to the biggest brands in car rental</h2>
 
-            <div class="row m-5" >
-              <div class="col-md-3 d-flex justify-content-around ">
-                <!-- <div> -->
-                  <img class="img-fluid " src="images/connect_brand/brand-1.png" alt="" srcset="">
-                <!-- </div> -->
+            <div  id="brand-row"class="row">
+              <div class="col-md-3">
+                <div class="brand-connection-image "><img src="images/connect_brand/brand-1.png" alt=""></div>
               </div>
-              <div class="col-md-3 d-flex justify-content-around ">
-                <!-- <div> -->
-                  <img class="img-fluid " src="images/connect_brand/brand-3.png" alt="" srcset="">
-                <!-- </div> -->
+              <div class="col-md-3">
+                <div class="brand-connection-image "><img src="images//connect_brand/brand-4.png" alt=""></div>
               </div>
-              <div class="col-md-3 d-flex justify-content-around ">
-                <!-- <div> -->
-                  <img class="img-fluid " src="images/connect_brand/brand-1.png" alt="" srcset="">
-                <!-- </div> -->
+              <div class="col-md-3">
+                <div class="brand-connection-image"><img src="images/connect_brand/brand-1.png" alt=""></div>
               </div>
-              <div class="col-md-3 d-flex justify-content-around ">
-                <!-- <div> -->
-                  <img class="img-fluid " src="images/connect_brand/brand-4.png" alt="" srcset="">
-                <!-- </div> -->
+              <div class="col-md-3">
+                <div class="brand-connection-image  "><img src="images/connect_brand/brand-3.png" alt=""></div>
               </div>
             </div>
-            <div class="row features m-2">
+            <div  id="brand-row"class="row">
               <div class="col-md-4 d-flex align-items-center p-2">
                 <div class="features-item-image">
                   <img  src="images/connect_brand/usp_calendar.png" alt="">
@@ -177,6 +169,35 @@
                 <div class="features-item-content" >
                   <h3>Price Match Guarantee</h3>
                   <p>Found the same deal for less? We’ll match the price.</p>
+                </div>
+              </div>
+            </div>
+
+            <div id="brand-row" class="row">
+              <div class="col-md-6 more-features">
+                <div class="more-features-content">
+                  <div>
+                    <img src="images/connect_brand/thumbnail_covid.png" alt="" srcset="">
+                  </div>
+                  <div class="more-features-items p-1">
+                    <h3>Clean cars. Flexible bookings. Socially distant rental counters.</h3>
+                    <p>We’re working with our partners to keep you safe and in the driving seat.</p>
+                    <span><a href="">Find out more</a></span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 more-features">
+                <div class="more-features-content">
+                  <div>
+                    <img src="images/connect_brand/email_signup.png" alt="" srcset="">
+                  </div>
+                  <div class="more-features-items p-1" >
+                    <h3>Subscribe for exclusive offers and deals!.</h3>
+                    <form class="d-flex flex-wrap m-1 pb-4 pt-4">
+                      <input type="text" class="form-control " style="width: 60%;" placeholder="Enter the Email">
+                      <button  class=" btn btn-info ml-1">Sign me up!</button>
+                    </form>
+                  </div>
                 </div>
               </div>
             </div>
