--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Travel.com</title>
     <link  rel="shortcut icon" href="images/logo/logo.png"  type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/> -->
   
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 </head>
@@ -496,7 +497,96 @@
             </div>
           </div>
         </section>
-        <section class="footer">footer</section>
+        <section class="footer">
+          <footer class="p-3">
+              <div class="row">
+                <div class="col-md-4 p-0 m-0">
+                    <div class="support">
+                      <h4>SUPPORT</h4>
+                      <div class="supportContact">
+
+                        <a href="" class="supportContactPhone">
+                          <div >
+                            <i class="fa fa-phone"></i>
+                          </div>
+                          <div class="vl ml-3" style="border-left: 1px solid rgb(198, 199, 198);
+                          height: 60px;"></div>
+                          <div class="pl-3">
+                            <p>9AM - 11PM</p>
+                            <h6>
+                              0123456789
+                            </h6>
+                          </div>
+                        </a>
+
+                        <a href="" class="supportContactLocation">
+                          <div>
+                            <i class="fa fa-map-marker"></i>
+                          </div>
+                          <div class="vl ml-3" style="border-left: 1px solid rgb(198, 199, 198);
+                          height: 60px;"></div>
+                          <div class="pl-3">
+                            <p>Office Location</p>
+                            <h6>
+                              Find our Office
+                            </h6>
+                          </div>
+                        </a>
+
+                      </div>
+                    </div>
+
+                </div>
+                <div class="col-md-5 col-sm-12 aboutUs">
+                  <h4>About Us</h4>
+                  <div class="row">
+                    
+                    <div class="col-md-4 col-sm-4">
+                      <p><a href="">EMI Terms</a></p>
+                      <p><a href="">Privacy Policy</a></p>
+                      <p><a href="">Career</a></p>
+                      <p><a href="">Contact Us</a></p>
+                    </div>
+                    <div class="col-md-4 col-sm-4">
+                      <p><a href="">EMI Terms</a></p>
+                      <p><a href="">Privacy Policy</a></p>
+                      <p><a href="">Career</a></p>
+                      <p><a href="">Contact Us</a></p>
+                    </div>
+                    <div class="col-md-4 col-sm-4">
+                      <p><a href="">EMI Terms</a></p>
+                      <p><a href="">Privacy Policy</a></p>
+                      <p><a href="">Career</a></p>
+                      <p><a href="">Contact Us</a></p>
+                    </div>
+                  </div>
+                </div>
+  
+                <div class="col-md-3 col-sm-12 connectedOffice">
+                  <h4>STAY CONNECTED</h4>
+                  <div class="connectedOfficeContent">
+                    <h5><i>TRAVEL.COM</i></h5>
+                    <p class="text-muted">Dhaka,Bangladesh</p>
+                    <h6 class="text-danger">E-mail: info@travel.com</h6>
+                    <h6 class="text-muted"> Contact: +880123-12551</h6>
+                  </div>
+                  <div class="connected-icons d-flex pt-3">
+                      <a href="http://www.facebook.com"><i class="fa fa-facebook-official"></i></a>
+                      <a href="" ><i class="fa fa-twitter-square"></i></a>
+                      <a href=""><i class="fa fa-youtube"></i></a>
+                      <a href=""><i class="fa fa-instagram"></i></a>             
+                  </div>           
+                </div>
+              </div>
+
+              <hr class="hrr">
+              <div class="row text-muted">
+                <div class="mx-auto">
+                  <p>2021 | made by  Obidul Kadir and all rights reserved. </p>
+                </div>
+              </div>
+          </footer>
+        </section>
     </div>
 
     <script>
