--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
         <section class="aside1">
           <div class="destinations">
             <h5>Top world-wide destinations</h5>
-            <div class="worldwide-destination d-flex flex-wrap">    
-              <div class="col-md-6 ">
+            <div class="worldwide-destination d-flex flex-md-wrap">    
+              <div class="col-md-6 col-sm-6  ">
                 <li><a href="">Bangkok</a></li>
                 <li><a href="">Dusseldorf</a></li>
                 <li><a href="">Auckland</a></li>
@@ -217,7 +217,7 @@
                 <li><a href="">Rome</a></li>
                 
               </div>
-              <div class="col-md-6 ">
+              <div class="col-md-6 col-sm-6">
                 <li><a href="">Basel</a></li>
                 <li><a href="">Edinburgh</a></li>
                 <li><a href="">Barcelona</a></li>
