updated the footer

--- a/index.html
+++ b/index.html
@@ -542,19 +542,19 @@
                   <h4>About Us</h4>
                   <div class="row">
                     
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-4 col-sm-4 col-6">
                       <p><a href="">EMI Terms</a></p>
                       <p><a href="">Privacy Policy</a></p>
                       <p><a href="">Career</a></p>
                       <p><a href="">Contact Us</a></p>
                     </div>
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-4 col-sm-4 col-6">
                       <p><a href="">EMI Terms</a></p>
                       <p><a href="">Privacy Policy</a></p>
                       <p><a href="">Career</a></p>
                       <p><a href="">Contact Us</a></p>
                     </div>
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-4 col-sm-4 col-12">
                       <p><a href="">EMI Terms</a></p>
                       <p><a href="">Privacy Policy</a></p>
                       <p><a href="">Career</a></p>
@@ -563,15 +563,15 @@
                   </div>
                 </div>
   
-                <div class="col-md-3 col-sm-12 connectedOffice">
+                <div class="col-md-3  col-sm-12 connectedOffice">
                   <h4>STAY CONNECTED</h4>
-                  <div class="connectedOfficeContent">
+                  <div class="connectedOfficeContent ">
                     <h5><i>TRAVEL.COM</i></h5>
                     <p class="text-muted">Dhaka,Bangladesh</p>
                     <h6 class="text-danger">E-mail: info@travel.com</h6>
                     <h6 class="text-muted"> Contact: +880123-12551</h6>
                   </div>
-                  <div class="connected-icons d-flex pt-3">
+                  <div class="connected-icons d-flex pt-3 text-sm-center">
                       <a href="http://www.facebook.com"><i class="fa fa-facebook-official"></i></a>
                       <a href="" ><i class="fa fa-twitter-square"></i></a>
                       <a href=""><i class="fa fa-youtube"></i></a>
